add file burger.js

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p>Рояль  — музыкальный инструмент, основной вид фортепиано, в котором струны, дека и механическая часть расположены горизонтально, корпус имеет крыловидную форму, а звуки издаются ударами войлочных молоточков по струнам при помощи клавиш[1]. В отличие от пианино, звучание рояля более выразительно и насыщенно по тембру, клавиатура более чувствительна, игровые качества более виртуозны, и диапазон градаций изменения звука - шире.</p>
     </div>
   </div>
-
+    <script src="./burger.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
